# rv-currencies

./: Cargo.toml
resources/: pairs.txt
src/: currency.rs  main.rs  rest.rs
