[package]
name = "rv-currency"
version = "0.1.0"
authors = ["Artur Aralin <artur.aralin97@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0-alpha.1"
actix-web = "2.0.0"
actix-rt = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
env_logger = "0.7"
qstring = "0.7"
